Fix resource getter and generator
Testing the resource getter

Camelize vs Capitalize

Camelize tests

--- a/lib/generators/templates/resource_token_controller.rb.erb
+++ b/lib/generators/templates/resource_token_controller.rb.erb
@@ -1,2 +1,2 @@
-class <%= resource_name.capitalize %>TokenController < Knock::AuthTokenController
+class <%= resource_name.camelize %>TokenController < Knock::AuthTokenController
 end
